// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylesheet basic 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
              <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha384-AKrtDL+trPi0sSrQYQGOFhGDKNWbKkBUXU1xuVjNgwU7GQTAZsTVmq/3n2BoQVRk\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet crossorigin attribute 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha384-AKrtDL+trPi0sSrQYQGOFhGDKNWbKkBUXU1xuVjNgwU7GQTAZsTVmq/3n2BoQVRk\\" crossorigin=\\"use-credentials\\">
          
        </body></html>",
}
`;

exports[`stylesheet inactive 1`] = `
Object {
  "fileName": "index.html",
  "source": "
        <!DOCTYPE html>
          <html lang=\\"en\\">
          <body>
              <link rel=\\"stylesheet\\" href=\\"1.css\\"></link>
          </body>
        </html>",
}
`;

exports[`stylesheet invalid hash algorithm 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha1-9TLSuSDha/bdMgalDUkaRY7jwy0=\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet invalid link 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"invalid.css\\">
          
        </body></html>",
}
`;

exports[`stylesheet multiple hash algorithms 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha256-r90EXPURW4FdOrgIF/lWOvMbV1GVl9O4UX1jbij/21U= sha384-AKrtDL+trPi0sSrQYQGOFhGDKNWbKkBUXU1xuVjNgwU7GQTAZsTVmq/3n2BoQVRk sha512-0Ki+nNBDkz68tV80xqoUJIyDydiLKTLh4cterOF9anqT5LvaWNW81m84iQHHT8ZH48//3jTYhtbisjEISPmEGQ== whirlpool-aewDddgfdCVAeqt6vR0sKeV5zwfP91pKeggNeuJ0N7SmtWx8jYzg1dYSsW2TFwaCXY4mn6kwk3RtvI1n0JV5Ug==\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet no href 1`] = `
Object {
  "fileName": "index.html",
  "source": "
        <!DOCTYPE html>
          <html lang=\\"en\\">
          <body>
              <link rel=\\"stylesheet\\"></link>
          </body>
        </html>",
}
`;

exports[`stylesheet remote 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"https://raw.githubusercontent.com/JonasKruckenberg/rollup-plugin-sri/master/test/fixtures/1.css\\" integrity=\\"sha384-SI8Lww7SI7ojkIK+OHWMVYWT/SI2f5rkGslJMkk/3C9mILFt0yMwTK3mlZL+BTmO\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet uppercase hash algorithms 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha256-r90EXPURW4FdOrgIF/lWOvMbV1GVl9O4UX1jbij/21U= sha384-AKrtDL+trPi0sSrQYQGOFhGDKNWbKkBUXU1xuVjNgwU7GQTAZsTVmq/3n2BoQVRk sha512-0Ki+nNBDkz68tV80xqoUJIyDydiLKTLh4cterOF9anqT5LvaWNW81m84iQHHT8ZH48//3jTYhtbisjEISPmEGQ==\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;
